# blizzard-archive-library

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindCascLib.cmake  FindStormLib.cmake  cmake-function.cmake
include/: BaseArchive.hpp  BlizzardArchive.h  CASCArchive.hpp  ClientData.hpp  ClientFile.hpp  Exception.hpp  Listfile.hpp  MPQArchive.hpp
src/: BaseArchive.cpp  BlizzardArchive.cpp  CASCArchive.cpp  ClientData.cpp  ClientFile.cpp  Listfile.cpp  MPQArchive.cpp
test/: main.cpp
